Tried to implement security on client code, not working yet.